add media to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -381,3 +381,5 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,intellij,pycharm
+
+media/*
