first attempt for simplifying assumption (1)

--- a/.gitignore
+++ b/.gitignore
@@ -383,3 +383,6 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,intellij,pycharm
 
 media/*
+media/
+.DS_Store
+.idea
